--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,9 @@
+:root {
+  --background-gradient: linear-gradient(180deg, #F6B868 0%, #EE6B2D 100%);
+  --answer-background: #F9D29F;
+  --answer-text: #9F938B;
+}
+
 * {
   margin: 0;
   padding: 0;
