--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -1,9 +1,3 @@
-:root {
-  --background-gradient: linear-gradient(180deg, #F6B868 0%, #EE6B2D 100%);
-  --answer-background: #F9D29F;
-  --answer-text: #9F938B;
-}
-
 .quiz-wrapper {
   /* background: linear-gradient(180deg, #F6B868 0%, #EE6B2D 100%); */
   background: var(--background-gradient);
@@ -32,30 +26,6 @@
   font-size: 40px;
 }
 
-.answers {
-  display: flex;
-  justify-content: space-between;
-  border: 2px solid var(--answer-background);
-  border-radius: 100px;
-  margin: 12px 0;
-}
-
-.answer {
-  font-size: 24px;
-  padding: 21px;
-  width: 100%;
-  text-align: center;
-  border-radius: 100px;
-  cursor: pointer;
-}
-
-.answer-section {
-  display: flex;
-  justify-content: center;
-  width: 50%;
-  border-radius: 100px;
-}
-
 .result {
   display: flex;
   justify-content: center;
@@ -63,11 +33,13 @@
   margin-top: 28px;
 }
 
-.answer-input {
-  display: none;
-}
-
-.answer-input:checked + label{
-  background-color: var(--answer-background);
-  color: var(--answer-text);
+.question-toggle {
+  margin-top: 10px;
+  background: none;
+  border: none;
+  font-family: 'Mulish', sans-serif;
+  color: #FFFFFF;
+  font-weight: 700;
+  cursor: pointer;
+  font-size: 16px;
 }
