--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -5,6 +5,7 @@
   font-family: 'Mulish', sans-serif;
   color: #FFFFFF;
   font-weight: 700;
+  overflow-y: auto;
 }
 
 .quiz-container {
@@ -61,6 +62,7 @@
 .question-sidebar {
   position: absolute;
   height: 100%;
+  width: 100%;
   background-color: black;
   opacity: 50%;
   padding-top: 50px;
@@ -86,6 +88,12 @@
     max-width: 900px;
     max-height: 80px;
     width: 70%;
+  }
+}
+
+@media (min-width: 501px) {
+  .question-sidebar {
+    width: auto;
   }
 }
 
